--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,2 +1,3 @@
-MONGO_URL=mongodb://localhost:27017
+MONGO_URL=mongodb://localhost:27017/giftdb
 DATASRC=gifts.json
+JWT_SECRET=your-secret-key-here
