--- a/giftlink-backend/.env
+++ b/giftlink-backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL=mongodb://localhost:27017/giftdb
+MONGO_URL=mongodb://localhost:27017
 DATASRC=gifts.json
 JWT_SECRET=your-secret-key-here
